--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Master of Electronics and ICT Engineering Technology
 <div class=card-content>
 <div class=media>
 <div class=media-content>
-<p class="title is-4">UniversitÃ© de Montpellier</p>
+<p class="title is-4">Université de Montpellier</p>
 <p class="subtitle is-6">Montpellier, France</p>
 </div>
 </div>
